# pyproject_template

./: .gitignore  LICENSE  README.md  deprecated_tox.ini  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: integration_tests.yml  test.yml  unit_tests.yml
src/: main.py
src/transformation_1/: step_1.py
src/transformation_2/: step_1.py
tests/: transformations_1_tests.py
tests/integration_tests/: conftest.py  test_inte.py
tests/unit_tests/: test_transformations.py  transformation_2_tests.py
