[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproject_template"
version = "0.0.1"
authors = [{ name = "Andreas Schreiber", email = "andi@example.com" }]
description = "Just a template"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["numpy", "pandas"]

# https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-groups
[dependency-groups]
dev = ["pytest", "tox-uv"]
lint = ["ruff", "pre-commit"]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.ruff]
line-length = 160
include = ["pyproject.toml", "src/**/*.py"]

[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
entrypoint = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests"]
