# [metadata]
# name = pyproject-template
# description = No description needed
# author = Andreas Schreiber
# license = MIT
# license_files = LICENSE
# platforms = linux
# classifiers =
#     Programming Language :: Python :: 3
#     Programming Language :: Python :: 3 :: Only
#     Programming Language :: Python :: 3.6
#     Programming Language :: Python :: 3.7
#     Programming Language :: Python :: 3.8
#     Programming Language :: Python :: 3.9

# [options]
# packages =
#     transformation_1
#     transformation_2
# install_requires =
#     numpy
#     pandas 
# python_requires = >=3.6
# package_dir =
#     =src
# zip_safe = no


# Running tox locally
# [options.extras_require]
# testing =
#     pytest
#     pytest-cov>=2.0
#     tox
